--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -168,6 +168,12 @@
       }
     }
 
+    &__header.button--reset {
+      span {
+        font-size: 1.8rem;
+      }
+    }
+
     .mobile-header {
       display: none;
     }
