[EATON-465] Global Elements - Add underline on hover to stand-alone navigation links

--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -40,6 +40,11 @@
     text-decoration: none;
   }
 
+  .open-sign-in:hover {
+    // EATON-465: Underline on hover (this is a stand-alone navigation link)
+    text-decoration: underline;
+  }
+
   //-----------------------------
   // Mobile Breakpoints
   // ----------------------------
