--- a/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
@@ -64,6 +64,7 @@
         left: 100%;
         top: 50%;
         bottom: 0;
+        transform: translate(-50%, -50%);
       }
     }
 
@@ -93,7 +94,7 @@
 
           &__icon {
             left: 0;
-            transform: translateX(-50%);
+            transform: translate(-50%, -50%);
           }
         }
 
