--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -280,13 +280,13 @@
 
 @media screen and (min-width: 992px) { .eaton-ttil-quote { width: 100%; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
   .eaton-ttil-quote__image { display: inline-block; position: relative; -webkit-box-ordinal-group: 2; -webkit-order: 1; -ms-flex-order: 1; order: 1; width: 484px; height: 484px; }
-  .eaton-ttil-quote__image__icon { margin: 0; left: 100%; top: 50%; bottom: 0; }
+  .eaton-ttil-quote__image__icon { margin: 0; left: 100%; top: 50%; bottom: 0; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
   .eaton-ttil-quote__text-container { width: calc(100% - 484px); -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; padding: 0 70px; }
   .eaton-ttil-quote__quote { font-size: 3.0rem; line-height: 4.8rem; padding-bottom: 60px; }
   .eaton-ttil-quote__author { font-size: 2.0rem; }
   .eaton-ttil-quote__left { margin-left: 0; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
   .eaton-ttil-quote__left .eaton-ttil-quote__image { -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; }
-  .eaton-ttil-quote__left .eaton-ttil-quote__image__icon { left: 0; -webkit-transform: translateX(-50%); transform: translateX(-50%); }
+  .eaton-ttil-quote__left .eaton-ttil-quote__image__icon { left: 0; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
   .eaton-ttil-quote__left .eaton-ttil-quote__text-container { -webkit-box-ordinal-group: 2; -webkit-order: 1; -ms-flex-order: 1; order: 1; }
   .eaton-ttil-quote__right .eaton-ttil-quote__text-container { text-align: left; } }
 
