--- a/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
@@ -3,37 +3,12 @@
   overflow: hidden;
   padding: 50px 0;
 
-  &.no-cta {
-
-    padding: 0;
-    margin-bottom: -35px;
-
-    .container {
-      width: 100%;
-      padding: 0;
-    }
-
-    .eaton-topic-link-white {
-
-      &__icon {
-        margin-bottom: 20px;
-      }
-
-      &__header {
-        margin-bottom: 5px;
-      }
-
-      &__description {
-        margin-bottom: 0;
-      }
-    }
-  }
-
-
 
   &__icon {
-    width: 100%;
+    width: 60px;
     margin-bottom: $spacing__md / 2;
+    display: inline-block;
+    float: left;
 
     img {
       width: 60px;
@@ -42,7 +17,9 @@
   }
 
   &__text-wrapper {
-    width: 100%;
+    width: calc(100% - 90px);
+    display: inline-block;
+    float: right;
   }
 
   &__header {
@@ -68,6 +45,32 @@
       &__header,
       &__description {
         color: $color__white;
+      }
+    }
+  }
+
+  &.no-cta {
+
+    padding: 0;
+    margin-bottom: -35px;
+
+    .container {
+      width: 100%;
+      padding: 0;
+    }
+
+    .eaton-topic-link-white {
+
+      &__icon {
+        margin-bottom: 20px;
+      }
+
+      &__header {
+        margin-bottom: 5px;
+      }
+
+      &__description {
+        margin-bottom: 0;
       }
     }
   }
