--- a/eaton.frontend/src/components/category-highlight/css/category-highlight.scss
+++ b/eaton.frontend/src/components/category-highlight/css/category-highlight.scss
@@ -9,6 +9,11 @@
 
   margin: 60px 0;
 
+  // EATON-598 - Override Margins when the List component is nested inside the Category Highlight Module
+  .eaton-list-component-default-view {
+    margin-top: 0;
+  }
+
   @include media-mobile-only {
     &__bottom {
       margin-top: -60px;
