--- a/eaton.frontend/src/components/title/css/title.scss
+++ b/eaton.frontend/src/components/title/css/title.scss
@@ -9,3 +9,9 @@
 // Import SubViews
 @import 'views/view-default';
 @import 'views/view-witheyebrowbyline';
+
+.title + .grid-2-column-control{
+  .eaton-grid-control {
+    margin-top: 0px;
+  }
+}
