--- a/eaton.frontend/src/components/list/css/views/_view-related-products.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-related-products.scss
@@ -35,16 +35,8 @@
   }
 
   &__title {
-    padding-bottom: 20px;
     padding-top: 30px;
-
-    @include media-tablet-only {
-      padding-top: 60px;
-    }
-
-    @include media-desktop-and-up {
-      padding-bottom: 10px;
-    }
+    margin-bottom: 10px;
   }
 
   &__arrow {
