--- a/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
@@ -1,7 +1,6 @@
 .tile-link-component {
 
-  margin-top: 60px;
-  margin-bottom: 0; // NOTE: Remove bottom margin since each '&__element' already has bottom margin
+  margin: 60px 0;
 
   &__container {
 
@@ -18,7 +17,7 @@
 
     color: $color__white;
     margin-left: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     height: 240px;
     position: relative;
     padding: 0;
