--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -118,13 +118,13 @@
 @media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; width: 250px; }
   .featured-story-component__content { padding: 60px 30px 60px 50px; } }
 
-.tile-link-component { margin-top: 60px; margin-bottom: 0; }
+.tile-link-component { margin: 60px 0; }
 
 @media screen and (min-width: 768px) { .tile-link-component__container { padding: 0 15px; } }
 
 .tile-link-component__copy { padding: 60px 0; }
 
-.tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 60px; height: 240px; position: relative; padding: 0; }
+.tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 30px; height: 240px; position: relative; padding: 0; }
 
 .tile-link-component__element:hover, .tile-link-component__element:active, .tile-link-component__element:focus { color: #FFF; text-decoration: none; }
 
