--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -99,3 +99,5 @@
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { .eaton-top-list-with-icon .container.row .col-md-4 { -webkit-box-flex: 0; -webkit-flex: 0 0 30%; -ms-flex: 0 0 30%; flex: 0 0 30%; }
   .eaton-grid-control .eaton-top-list-with-icon .container.row .col-md-4 { -webkit-box-flex: 0; -webkit-flex: 0 0 100%; -ms-flex: 0 0 100%; flex: 0 0 100%; } }
+
+.icon-list + .resource-list { margin-top: -30px; }
