--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-related-products/css/module-related-products.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-related-products/css/module-related-products.css
@@ -19,7 +19,7 @@
 
 .module-related-products__slides a { z-index: 10; }
 
-.module-related-products__dots { padding-top: 10px; }
+.module-related-products__dots { padding-top: 10px; padding-left: 0; }
 
 @media screen and (min-width: 768px) { .module-related-products__dots { padding-top: 40px; } }
 
