--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -69,7 +69,7 @@ body.zoom-overlay-open { overflow: hidden; }
 
 .module-media-gallery__thumbnail-list { padding: 0; margin: 0; list-style-type: none; }
 
-.module-media-gallery__thumbnail-container .module-media-gallery__arrows { color: #005EB8; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+.module-media-gallery__thumbnail-container .module-media-gallery__arrows { background-color: #FFF; color: #005EB8; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); height: 100%; padding: 10px; }
 
 .module-media-gallery__thumbnail-image-wrapper { padding: 0; }
 
