--- a/eaton.frontend/src/shared/module-table/css/module-table.scss
+++ b/eaton.frontend/src/shared/module-table/css/module-table.scss
@@ -15,7 +15,6 @@
   &__head {
     margin-top: 0;
     margin-bottom: 22px;
-    padding-left: 20px;
   }
 
   &__body {
@@ -41,9 +40,14 @@
   @include media-mobile-and-tablet {
 
     margin-bottom: ($spacing__md / 2);
+    $padding_left: 15px;
 
     &__row {
-      padding: 12px 15px;
+      padding: 12px $padding_left;
+    }
+
+    &__head {
+      padding-left: $padding_left;
     }
 
   }
@@ -59,6 +63,7 @@
 
     &__head {
       margin-bottom: 48px;
+      padding-left: 20px;
     }
 
     &__row {
