--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -45,7 +45,7 @@
 
 .faceted-navigation-header__sort-options .dropdown li a:hover { background-color: #FFF; text-decoration: underline; }
 
-.faceted-navigation-header__header-top { border-bottom: 0.2rem solid #F8F8F8; padding-bottom: 3rem; padding-top: 5rem; }
+.faceted-navigation-header__header-top { border-bottom: 0.2rem solid #F8F8F8; padding-bottom: 20px; padding-top: 20px; }
 
 .faceted-navigation-header__title { display: inline-block; }
 
