--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -115,8 +115,8 @@
   //--------------
   &__header-top {
     border-bottom: .2rem solid $color__secondary-gray6;
-    padding-bottom: 3rem;
-    padding-top: 5rem;
+    padding-bottom: 20px; // EATON-662: Visually 30px Spacing
+    padding-top: 20px;    // EATON-662: Visually 40px Spacing
   }
 
   &__title {
