--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-autocorrected-search/css/module-autocorrected-search.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-autocorrected-search/css/module-autocorrected-search.css
@@ -11,9 +11,9 @@
  */
 
 
-.autocorrected-search { margin-top: 50px; }
+@media screen and (max-width: 991px) { .autocorrected-search { margin-top: 44px; margin-bottom: 4px; }
+  .autocorrected-search__search-instead { display: block; } }
 
-@media screen and (max-width: 991px) { .autocorrected-search__search-instead { display: block; } }
-
-@media screen and (min-width: 992px) { .autocorrected-search__results { display: inline-block; }
+@media screen and (min-width: 992px) { .autocorrected-search { margin-top: 40px; margin-bottom: 4px; }
+  .autocorrected-search__results { display: inline-block; }
   .autocorrected-search__search-instead { display: inline-block; margin-left: 16px; } }
