[EATON-635] FIX - Resources - Mobile - Toggle Header and "+/-" need to be vertically centered

--- a/eaton.frontend/src/components/resource-list/css/resource-list.scss
+++ b/eaton.frontend/src/components/resource-list/css/resource-list.scss
@@ -99,8 +99,8 @@
 
     &__icons {
       position: absolute;
-      bottom: unset;
-      // bottom: auto;
+      // bottom: unset;
+      bottom: auto;
       top: 50%;
       transform: translateY(-50%);
     }
