--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
@@ -77,7 +77,7 @@
 
 .product-card-subcategory .rendition__image { position: absolute; background-color: #F8F8F8; border: 1px solid #EEF0F2; max-width: 100%; top: 0; left: 0; padding: 20px; height: 100%; width: 100%; }
 
-.product-card-subcategory__name { color: #005EB8; font-family: Arial, "Arial", sans-serif; font-size: 24px; font-weight: bold; line-height: 26px; margin-top: 18px; margin-bottom: 0; }
+.product-card-subcategory__name { color: #005EB8; font-family: Arial, "Arial", sans-serif; font-size: 2.4rem; font-weight: bold; line-height: 2.6rem; margin-top: 18px; margin-bottom: 0; }
 
 @media screen and (max-width: 767px) { .product-card-subcategory { width: 100%; max-width: 440px; margin-left: auto; margin-right: auto; } }
 
@@ -87,4 +87,4 @@
 
 @media screen and (min-width: 992px) { .product-card-subcategory { width: 32%; margin-right: 2%; margin-bottom: 52px; }
   .product-card-subcategory:nth-child(3n+3) { margin-right: 0; }
-  .product-card-subcategory__name { font-size: 28px; line-height: 32px; } }
+  .product-card-subcategory__name { font-size: 2.8rem; line-height: 3.2rem; } }
