--- a/eaton.frontend/src/components/ttil/css/views/_view-page-overview.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-page-overview.scss
@@ -28,6 +28,9 @@
     // empty selector for future reference
   }
 
+  @include media-mobile-only {
+    margin-top: $spacing__md;
+  }
 
 
   //-----------------------------------
