--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
@@ -99,6 +99,8 @@
 
 .eaton-page-overview__title::after { content: ''; background-color: #005EB8; bottom: 0; display: block; height: 4px; left: 0; position: absolute; width: 68px; }
 
+@media screen and (max-width: 767px) { .eaton-page-overview { margin-top: 60px; } }
+
 @media screen and (max-width: 991px) { .eaton-page-overview__title { padding-bottom: 30px; }
   .eaton-page-overview__content, .eaton-page-overview__cta { margin-top: 30px; }
   .eaton-page-overview__cta--mobile { display: block; }
