--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -46,17 +46,25 @@
             width: 2rem;
             height: 2rem;
             left: 0;
-            top: -.3rem;
+            top: -3px;
           }
         }
 
         &:checked + span::after {
           width: 1.2rem;
           height: 1.2rem;
-          top: .1rem;
-          left: .4rem;
+          left: 4px;
           font-size: 1rem;
-          line-height: 1.4rem;
+          line-height: 1;
+          top: 3px;
+        }
+      }
+    }
+
+    input[type="radio"] {
+      &.input--small {
+        &:checked + span::after {
+          top: 1px;
         }
       }
     }
@@ -242,7 +250,7 @@
   }
 }
 
-
+/*
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .faceted-navigation {
     &__list-item {
@@ -264,3 +272,4 @@
     }
   }
 }
+*/
