--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/upsell-products/css/upsell-products.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/upsell-products/css/upsell-products.css
@@ -17,6 +17,8 @@
 
 .upsell-products__slides a { z-index: 10; }
 
+.upsell-products .rendition__image { margin: 0 auto; padding: 20px; }
+
 .upsell-products__arrows { position: absolute; top: 22%; color: #CCD2D7; display: none !important; }
 
 .upsell-products__arrows .icon { font-size: 37px; }
