--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
@@ -11,7 +11,7 @@
  */
 
 
-.secondary-content-accordion__header { position: relative; padding: 30px 0 10px; }
+.secondary-content-accordion__header { position: relative; }
 
 .secondary-content-accordion__header--title { color: #333F48; display: block; margin-bottom: 0; }
 
@@ -39,7 +39,9 @@
 
 .secondary-content-accordion__icons { position: absolute; right: 0; color: #005EB8; font-size: 2.25rem; }
 
-@media screen and (max-width: 991px) { .secondary-content-accordion.panel-group .panel + .panel { margin-top: 0; }
+@media screen and (max-width: 991px) { .secondary-content-accordion__header { padding: 20px 0; }
+  .secondary-content-accordion.panel-group .panel + .panel { margin-top: 0; }
   .secondary-content-accordion__icons { position: absolute; bottom: auto; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); } }
 
-@media screen and (min-width: 992px) { .secondary-content-accordion__icons { bottom: 22px; } }
+@media screen and (min-width: 992px) { .secondary-content-accordion__header { padding: 30px 0 10px; }
+  .secondary-content-accordion__icons { bottom: 22px; } }
