--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
@@ -55,14 +55,6 @@
 
 .eaton-product-tabs__buttons__center a { width: 33.333%; display: inline-block; float: left; }
 
-.eaton-product-tabs--fixed .eaton-product-tabs__tab-panel { padding-top: 390px; }
-
-.eaton-product-tabs--fixed .eaton-product-tabs__buttons { position: fixed; z-index: 99; padding: 0; margin-left: 0; margin-right: 0; }
-
-.eaton-product-tabs--fixed .eaton-product-tabs__buttons::after { background-color: inherit; content: ''; height: 149px; left: -50%; position: absolute; top: 0; width: 200%; z-index: -1; }
-
-.eaton-product-tabs--fixed .eaton-product-tabs__buttons .container { position: fixed; padding: 0; margin-left: -15px; margin-right: -15px; }
-
 .eaton-product-tabs__description { padding: 10px 0; }
 
 .eaton-product-tabs__description .b-eyebrow-small { color: #005EB8; font-weight: bold; }
@@ -109,8 +101,10 @@
   .eaton-product-tabs .eaton-product-tabs__dropdown { width: 93%; margin-top: 20px; margin-bottom: 20px; }
   .eaton-product-tabs__page-utility { padding: 0 15px; }
   .eaton-product-tabs .eaton-product-tabs__buttons__center { border-top: 2px solid #EEF0F2; }
-  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { position: relative; z-index: unset; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { position: relative; z-index: unset; padding: 0; margin-left: 0; margin-right: 0; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__buttons::after { background-color: inherit; content: ''; height: 149px; left: -50%; position: absolute; top: 0; width: 200%; z-index: -1; }
   .eaton-product-tabs--fixed .eaton-product-tabs__buttons::before { height: 78px; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__buttons .container { position: fixed; padding: 0; margin-left: -15px; margin-right: -15px; }
   .eaton-product-tabs--fixed .eaton-product-tabs__buttons__center { position: fixed; top: 0; left: 0; right: 0; margin: 0; z-index: 99; padding: 0; }
   .eaton-product-tabs--fixed .eaton-product-tabs__description { display: none; }
   .eaton-product-tabs--fixed .eaton-product-tabs__dropdown-container { margin-top: 157px; z-index: 1; padding: 0; }
@@ -123,7 +117,6 @@
   .eaton-product-tabs label, .eaton-product-tabs div.tab-label { padding: 4rem 0; }
   .eaton-product-tabs label .icon, .eaton-product-tabs div.tab-label .icon { font-size: 4rem; }
   .eaton-product-tabs label span, .eaton-product-tabs div.tab-label span { font-size: 1.4rem; }
-  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 80px; margin-left: -15px; margin-right: -15px; }
-  .eaton-product-tabs--fixed .eaton-product-tabs__page-utility { margin-top: 274px; } }
+  .eaton-product-tabs--fixed { margin-top: 122px; } }
 
 .aem-AuthorLayer-Edit .eaton-product-tabs__tab-panel, .cq-wcm-edit .eaton-product-tabs__tab-panel { display: block; }
