[EATON-622] Transition from Primary Navigation to sticky navigation should be smoother.

--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -53,6 +53,7 @@
       .eaton-logo__link {
         width: 126px;
         height: 40px;
+        transition: height ease-in-out 0.3s, width ease-in-out 0.3s;
       }
     }
   }
