--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -344,12 +344,16 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .eaton-text-default .rich-text-container ul { list-style-type: none; padding: 20px 0 0; }
 
-.eaton-text-default .rich-text-container ul li { position: relative; padding: 0 0 15px 30px; }
+.eaton-text-default .rich-text-container ul li { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.8rem; position: relative; padding: 0 0 15px 30px; }
+
+.eaton-text-default .rich-text-container ul li a { color: #005EB8; }
+
+@media screen and (min-width: 992px) { .eaton-text-default .rich-text-container ul li { font-family: Arial, sans-serif; font-size: 2.4rem; font-weight: normal; line-height: 3.8rem; } }
 
 .eaton-text-default .rich-text-container ul li::before { height: 10px; width: 10px; content: ''; background-color: #005EB8; border-radius: 50%; left: 0; position: absolute; top: 0.6em; }
 
 @media screen and (max-width: 991px) { .eaton-text-default .rich-text-container ul li { padding: 0 0 15px 15px; }
-  .eaton-text-default .rich-text-container ul li::before { height: 5px; width: 5px; left: 1px; top: 0.3em; } }
+  .eaton-text-default .rich-text-container ul li::before { height: 5px; width: 5px; left: 1px; top: 10px; } }
 
 .dark-theme .eaton-text-default .rich-text-container { color: #FFF; }
 
