[BackToSearch] Fix issue in tablet breakpoint - Text should Not warp

--- a/eaton.frontend/src/components/back-to-search/css/back-to-search.scss
+++ b/eaton.frontend/src/components/back-to-search/css/back-to-search.scss
@@ -13,7 +13,18 @@
     padding-right: 5px;
   }
 
+  //-----------------------------------
+  // 0-991px
+  //-----------------------------------
   @include media-mobile-and-tablet {
     margin: 0;
+  }
+
+
+  //-----------------------------------
+  // 768px to 991px
+  //-----------------------------------
+  @include media-tablet-only {
+    width: 50%;
   }
 }
