--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/back-to-search/css/back-to-search.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/back-to-search/css/back-to-search.css
@@ -16,3 +16,5 @@
 .eaton-product-back-to-search i { font-size: 1.1rem; padding-right: 5px; }
 
 @media screen and (max-width: 991px) { .eaton-product-back-to-search { margin: 0; } }
+
+@media screen and (min-width: 768px) and (max-width: 991px) { .eaton-product-back-to-search { width: 50%; } }
