EATON-650: added special media query for resolutions between 992px and  1265px

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -19,7 +19,12 @@
 
 .faceted-navigation-header__sort-options { float: right; margin-right: -52px; width: 160px; margin-top: -15px; position: relative; }
 
-@media screen and (max-width: 991px) { .faceted-navigation-header__sort-options { margin-right: -20px; width: 130px; height: 70px; } }
+@media screen and (max-width: 991px) { .faceted-navigation-header__sort-options { margin-right: -20px; width: 130px; height: 70px; }
+  .faceted-navigation-header__sort-options .dropdown [data-toggle="dropdown"][aria-expanded="true"] { border: none; }
+  .faceted-navigation-header__sort-options .dropdown-menu { display: none; } }
+
+@media screen and (min-width: 992px) and (max-width: 1265px) { .faceted-navigation-header__sort-options { margin-right: -15px; width: 124px; }
+  .faceted-navigation-header__sort-options .dropdown-menu { width: 124px; min-width: 124px; } }
 
 .faceted-navigation-header__sort-options select.native-select { position: absolute; background: transparent; top: 0; right: -10px; width: 170px; height: 45px; border: 0; color: transparent; }
 
