--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -27,6 +27,25 @@
       margin-right: -20px;
       width: 130px;
       height: 70px;
+
+      .dropdown [data-toggle="dropdown"][aria-expanded="true"] {
+        border: none;
+      }
+
+      .dropdown-menu {
+        display: none;
+      }
+    }
+
+    // EATON-650: very specific behavior for these resolutuions
+    @media screen and (min-width: 992px) and (max-width: 1265px) {
+      margin-right: -15px;
+      width: 124px;
+
+      .dropdown-menu {
+        width: 124px;
+        min-width: 124px;
+      }
     }
 
     select.native-select {
