--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -29,7 +29,7 @@
       height: 70px;
 
       .dropdown [data-toggle="dropdown"][aria-expanded="true"] {
-        border: none;
+        border: 0;
       }
 
       .dropdown-menu {
