--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
@@ -17,6 +17,9 @@
 
 .product-specifications .value-type-image a { display: inline-block; }
 
-.product-specifications .value-type-image img { width: 100%; height: auto; max-width: 43px; max-height: 43px; vertical-align: middle; }
+.product-specifications .value-type-image img { width: 100%; height: auto; vertical-align: middle; }
 
-@media screen and (max-width: 991px) { .product-specifications .module-anchor-links { display: none; } }
+@media screen and (max-width: 991px) { .product-specifications .module-anchor-links { display: none; }
+  .product-specifications .value-type-image img { margin-left: 6px; max-width: 26px; max-height: 26px; } }
+
+@media screen and (min-width: 992px) { .product-specifications .value-type-image img { max-width: 42px; max-height: 42px; } }
