--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -34,7 +34,7 @@
         <sly data-sly-test.facetInputType="${ item.facetType == 'radios' ? 'radio' : 'checkbox' }" />
 
         <!--/* Facet Header */-->
-        <button class="faceted-navigation__header button--reset b-body-copy-small"
+        <button class="faceted-navigation__header button--reset"
           data-toggle="collapse"
           data-target=".${ facetGroupID }"
           aria-expanded="true"
