--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -23,9 +23,10 @@
   &__article {
 
     &--copy {
-      padding: 15px 0;
+      padding: 15px 0 40px 0;
 
       &:last-child {
+        padding: 15px 0;
         .category-item-date--padding {
           padding-bottom: 0;
         }
