--- a/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
@@ -112,7 +112,7 @@
   }
 
   @include media-desktop-large {
-    width: calc((100% - 1140px) / 2 + 1140px);
+    width: calc(((100% - 1140px) / 2) + 1140px);
 
     &__text-container {
       width: calc(1140px - 484px);
@@ -130,6 +130,7 @@
 
     &__left {
       justify-content: flex-end;
+      margin-right: calc((100% - 1140px) / 2);
 
       .eaton-ttil-quote__text-container {
         padding-left: 0;
