--- a/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
@@ -112,7 +112,7 @@
   }
 
   @include media-desktop-large {
-    width: calc(((100% - 1140px) / 2) + (1140px));
+    width: calc(1140px + ((100% - 1140px) / 2));
 
     &__text-container {
       width: calc(1140px - 484px);
