fixes for EATON-647, EATON-643

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/image/css/image.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/image/css/image.css
@@ -14,3 +14,5 @@
 .eaton-image .rendition { text-align: center; }
 
 .eaton-image .rendition img { display: inline; }
+
+.eaton-grid-control__column .eaton-image { margin-top: 25px; }
