--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -158,7 +158,7 @@
 
 @media screen and (max-width: 991px) { .tile-link-component__element { margin-left: 0; } }
 
-@media screen and (max-width: 767px) { .tile-link-component { margin: 0 15px; } }
+@media screen and (max-width: 767px) { .tile-link-component { margin: 60px 15px; } }
 
 @media screen and (min-width: 992px) { .tile-link-component__element { width: 31%; } }
 
