--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
@@ -17,7 +17,9 @@
 
 .product-card-sku__name { margin-bottom: 5px; }
 
-.product-card-sku__name .icon, .product-card-sku__link-item .icon { font-size: 1rem; }
+.product-card-sku__name .icon, .product-card-sku__link-item .icon { font-size: 2rem; }
+
+@media screen and (min-width: 992px) { .product-card-sku__name .icon.icon-chevron-right { font-size: 2rem; } }
 
 .product-card-sku__image-link { display: block; }
 
@@ -33,12 +35,13 @@
   .product-card-sku__image-wrapper { left: 30px; top: 20px; }
   .product-card-sku__title-wrapper { background-color: #005EB8; position: relative; }
   .product-card-sku__name { font-family: Arial, sans-serif; font-size: 2.2rem; font-weight: bold; line-height: 2.9rem; margin-bottom: 5px; padding-left: 99px; padding-right: 40px; padding-top: 16px; }
-  .product-card-sku__name .icon { height: 1rem; width: 1rem; line-height: 1rem; position: absolute; right: 30px; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+  .product-card-sku__name .icon { height: 1rem; width: 1rem; line-height: 1rem; position: absolute; right: 30px; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); font-size: 1rem; }
   .product-card-sku__price { padding-bottom: 20px; padding-left: 99px; }
   .product-card-sku__link-item { font-family: Arial, sans-serif; font-size: 1.3rem; font-weight: normal; line-height: 1.7rem; background-color: #F8F8F8; padding: 12px 30px; }
-  .product-card-sku__link-item-link { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+  .product-card-sku__link-item .icon { font-size: 1rem; }
+  .product-card-sku__link-item-link { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; font-size: 1rem; }
   .product-card-sku__link-item-link:hover { color: #005EB8; text-decoration: none; }
-  .product-card-sku__link-item-link .link-label { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
+  .product-card-sku__link-item-link .link-label { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; font-size: 1.3rem; }
   .product-card-sku__content { padding: 30px 30px; }
   .product-card-sku__attrs-list { padding-bottom: 16px; }
   .product-card-sku__attrs-list-item { margin-bottom: 10px; }
