--- a/eaton.frontend/src/components/divider/css/divider.scss
+++ b/eaton.frontend/src/components/divider/css/divider.scss
@@ -20,4 +20,11 @@
     margin-bottom: 20px;
   }
 
+  //------------------------------------
+  // fix for EATON-648
+  //------------------------------------
+  .eaton-grid-control .col-md-4 &{
+    margin-top: 25px;
+  }
+
 }
