[EATON-583] Statement text should be smaller when placed in two column grid.

--- a/eaton.frontend/src/components/text/css/views/_view-statement.scss
+++ b/eaton.frontend/src/components/text/css/views/_view-statement.scss
@@ -33,6 +33,12 @@
 
       // EATON-566: Fix - Text - Statement and Image list too close to each other when placed in two column grid.
       max-width: 420px;
+
+      // Statement text styles when placed in two column grid
+      .eaton-grid-control & {
+        font-size: 2.3rem;
+        line-height: 3rem;
+      }
     }
   }
 
